--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@monaco-editor/react": "^4.2.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "remark-parse": "^9.0.0",
+    "remark-slate": "^1.8.0",
+    "slate": "^0.63.0",
+    "slate-react": "^0.65.2",
+    "unified": "^9.2.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
