--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "remark-gfm": "^1.0.0",
     "remark-parse": "^9.0.0",
     "remark-slate": "^1.8.0",
+    "remark-slate-transformer": "^0.4.0",
     "slate": "^0.63.0",
     "slate-react": "^0.65.2",
     "unified": "^9.2.1",
